[package]
name = "rust_reime005_bin_test"
version = "0.1.0"
authors = ["Marius Reimer <reime005@gmail.com>"]
edition = "2018"

license = "MIT"
description = "A rust test binary"
readme = "README.md"
homepage = "https://mariusreimer.com"
repository = "https://github.com/reime005/rust_reime005_bin_test"
keywords = ["cli", "binary", "demo", "test", "github-actions", "cicd"]
categories = ["command-line-utilities"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
